# nbviz

./: .gitignore  README.md
api/: Dockerfile  main.py  requirements.txt
api/src/routes/: analytics.py  files.py  openalex.py
api/src/utils/: clean_up.py  constants.py  expections.py
nbviz_scientometric_tools/: README.md  pyproject.toml
nbviz_scientometric_tools/nbviz_scientometric_tools/: __init__.py  analysis.py  count_data.py  graph.py
web_app/src/api/: send-merge-files.ts  send-unify-files.ts
web_app/src/components/FileInputInRow/: index.tsx
web_app/src/components/Navbar/: index.tsx
web_app/src/pages/: _document.page.tsx
web_app/src/pages/home/: index.tsx
web_app/src/pages/mesclagem/: index.page.tsx
web_app/src/pages/unificar/: index.page.tsx  styles.ts
web_app/src/pages/unificar/components/FileDisplay/: index.tsx  styles.ts
web_app/src/pages/unificar/components/MultipleFilesInput/: index.tsx  styles.ts
web_app/src/utils/: formatBytes.ts
