[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nbviz_scientometric_tools"
version = "0.3.0"
description = "Ferramentas para análise bibliométrica e cienciométrica das bases de dados Web of Science e Scopus"
readme = "README.md"
dependencies = [
    "polars",
    "unidecode",
]

[tool.setuptools]
packages = ["nbviz_scientometric_tools"]
